<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/field"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="300sp"
        android:layout_height="48sp"
        android:layout_marginTop="32sp"
        android:fontFamily="@font/montserrat_subrayada_bold"
        android:text="@string/logo_text"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number_field_1"
        android:layout_width="300sp"
        android:layout_height="48sp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHighlight="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView" />

    <EditText
        android:id="@+id/number_field_2"
        android:layout_width="300sp"
        android:layout_height="48sp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="number"
        android:textAlignment="center"
        android:textColorHighlight="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_field_1" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/plus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_field_2" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/minus_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus_button" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/multiply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus_button" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/divide_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiply_button" />


</androidx.constraintlayout.widget.ConstraintLayout>